[package]
name = "traffic-engine"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[dependencies]
# bevy = { version = "0.8.1", features = [] }
# bevy_config_cam = { version = "0.3.0"}
# smooth-bevy-cameras = "0.5.0"
tokio = { version = "1.20.1", features = ["full"] }
vulkano = "0.31.1"
bitflags = "1.3.2"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Add the contents of this file to `config.toml` to enable "fast build" configuration. Please read the notes below.

# NOTE: For maximum performance, build using a nightly compiler
# If you are using rust stable, remove the "-Zshare-generics=y" below.

# [target.x86_64-unknown-linux-gnu]
# linker = "clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

# NOTE: you must manually install https://github.com/michaeleisel/zld on mac. you can easily do this with the "brew" package manager:
# `brew install michaeleisel/zld/zld`
# [target.x86_64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/bin/zld", "-Zshare-generics=y"]

# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"
# rustflags = ["-Zshare-generics=n"]

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
#[profile.dev]
#debug = 1
