[package]
name = "traffic-engine"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[dependencies]
parking_lot = "0.12.1"
nalgebra-glm = "0.17.0"
tokio = { version = "1.20.1", features = ["full"] }
bitflags = "1.3.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3