[package]
name = "traffic-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "te"
path = "src/lib.rs"

[toolchain]
channel = "nightly"

[dependencies]
glam = "0.22.0"
# nalgebra-glm = "0.17.0"
tokio = { version = "1.20.1", features = ["full"] }
bitflags = "1.3.2"
vulkano = "0.31.1"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
# cgmath = "0.18.0"
png = "0.17.7"
serde = { version = "1.0.147", features = ["derive"] }
ron = "0.8.0"
rand = "0.8.5"
glium = "0.32.1"
bestest_panik = "0.1.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3